--- a/tinydb.bib
+++ b/tinydb.bib
@@ -14,6 +14,21 @@
  year = {2005}
 }
 
+@inproceedings{Agichtein:2000:SER:336597.336644,
+ acmid = {336644},
+ author = {Agichtein, Eugene and Gravano, Luis},
+ booktitle = {Proc. of the Fifth ACM Conference on Digital Libraries},
+ doi = {10.1145/336597.336644},
+ isbn = {1-58113-231-X},
+ link = {http://doi.acm.org/10.1145/336597.336644},
+ location = {San Antonio, Texas, USA},
+ numpages = {10},
+ publisher = {ACM},
+ series = {DL '00},
+ title = {Snowball: Extracting Relations from Large Plain-text Collections},
+ year = {2000}
+}
+
 @article{Ando:2005:FLP:1046920.1194905,
  acmid = {1194905},
  author = {Ando, Rie Kubota and Zhang, Tong},
@@ -30,6 +45,15 @@
  year = {2005}
 }
 
+@inproceedings{andreas-vlachos-clark:2013:Short,
+ author = {Andreas, Jacob  and  Vlachos, Andreas  and  Clark, Stephen},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P13-2009},
+ publisher = {ACL},
+ title = {Semantic Parsing as Machine Translation},
+ year = {2013}
+}
+
 @inproceedings{andrew:2006:EMNLP,
  address = {Sydney, Australia},
  author = {Andrew, Galen},
@@ -42,6 +66,15 @@
  year = {2006}
 }
 
+@inproceedings{artzi-lee-zettlemoyer:2015:EMNLP,
+ author = {Artzi, Yoav  and  Lee, Kenton  and  Zettlemoyer, Luke},
+ booktitle = {Proc. of EMNLP},
+ link = {http://aclweb.org/anthology/D15-1198},
+ publisher = {ACL},
+ title = {Broad-coverage CCG Semantic Parsing with AMR},
+ year = {2015}
+}
+
 @inproceedings{attardi:2006:CoNLL-X,
  address = {New York City},
  author = {Attardi, Giuseppe},
@@ -52,6 +85,28 @@
  publisher = {Association for Computational Linguistics},
  title = {Experiments with a Multilanguage Non-Projective Dependency Parser},
  year = {2006}
+}
+
+@inproceedings{ballesteros-dyer-smith:2015:EMNLP,
+ author = {Ballesteros, Miguel  and  Dyer, Chris  and  Smith, Noah A.},
+ booktitle = {Proc. of EMNLP},
+ link = {http://aclweb.org/anthology/D15-1041},
+ publisher = {ACL},
+ title = {Improved Transition-based Parsing by Modeling Characters instead of Words with LSTMs},
+ year = {2015}
+}
+
+@inproceedings{Banko:2007:OIE:1625275.1625705,
+ acmid = {1625705},
+ author = {Banko, Michele and Cafarella, Michael J. and Soderland, Stephen and Broadhead, Matt and Etzioni, Oren},
+ booktitle = {Proc. of IJCAI},
+ link = {http://dl.acm.org/citation.cfm?id=1625275.1625705},
+ location = {Hyderabad, India},
+ numpages = {7},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+ series = {IJCAI'07},
+ title = {Open Information Extraction from the Web},
+ year = {2007}
 }
 
 @article{baum1966statistical,
@@ -85,6 +140,15 @@
  publisher = {Association for Computational Linguistics},
  title = {The First Surface Realisation Shared Task: Overview and Evaluation Results},
  year = {2011}
+}
+
+@inproceedings{berant-liang:2014:P14-1,
+ author = {Berant, Jonathan  and  Liang, Percy},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P14-1133},
+ publisher = {ACL},
+ title = {Semantic Parsing via Paraphrasing},
+ year = {2014}
 }
 
 @inproceedings{blitzer-mcdonald-pereira:2006:EMNLP,
@@ -157,6 +221,31 @@
  year = {1991}
 }
 
+@inproceedings{cai-yates:2013:ACL2013,
+ author = {Cai, Qingqing  and  Yates, Alexander},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P13-1042},
+ publisher = {ACL},
+ title = {Large-scale Semantic Parsing via Schema Matching and Lexicon Extension},
+ year = {2013}
+}
+
+@incollection{Candela:2006,
+ author = {Dagan, Ido and Glickman, Oren and Magnini, Bernardo},
+ booktitle = {Machine Learning Challenges. Evaluating Predictive Uncertainty, Visual Object Classification, and Recognising Tectual Entailment},
+ doi = {10.1007/11736790_9},
+ editor = {Quinonero-Candela, Joaquin and Dagan, Ido and Magnini, Bernardo and d Alche-Buc, Florence},
+ isbn = {978-3-540-33427-9},
+ language = {English},
+ link = {http://dx.doi.org/10.1007/11736790_9},
+ pages = {177-190},
+ publisher = {Springer Berlin Heidelberg},
+ series = {Lecture Notes in Computer Science},
+ title = {The PASCAL Recognising Textual Entailment Challenge},
+ volume = {3944},
+ year = {2006}
+}
+
 @inproceedings{Cao:2007:LRP:1273496.1273513,
  acmid = {1273513},
  address = {New York, NY, USA},
@@ -172,6 +261,16 @@
  series = {ICML '07},
  title = {Learning to Rank: From Pairwise Approach to Listwise Approach},
  year = {2007}
+}
+
+@incollection{Carpenter1998,
+ author = {Carpenter, Bob},
+ isbn = {0-262-03248-1},
+ link = {http://dl.acm.org/citation.cfm?id=286695},
+ month = {aug},
+ publisher = {MIT Press},
+ title = {Type-logical semantics},
+ year = {1998}
 }
 
 @inproceedings{chang-han:2010:EMNLP,
@@ -211,6 +310,15 @@
  year = {2014}
 }
 
+@inproceedings{choi-kwiatkowski-zettlemoyer:2015:ACL-IJCNLP,
+ author = {Choi, Eunsol  and  Kwiatkowski, Tom  and  Zettlemoyer, Luke},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P15-1127},
+ publisher = {ACL},
+ title = {Scalable Semantic Parsing with Partial Ontologies},
+ year = {2015}
+}
+
 @inproceedings{choi-mccallum:2013:ACL2013,
  address = {Sofia, Bulgaria},
  author = {Choi, Jinho D.  and  McCallum, Andrew},
@@ -240,6 +348,12 @@
  publisher = {University of Colorado at Boulder},
  title = {Optimization of natural language processing components for robustness and scalability},
  year = {2012}
+}
+
+@book{Chomsky1957,
+ author = {Chomsky, Noam},
+ title = {Syntactic Structure},
+ year = {1957}
 }
 
 @inproceedings{collins-roark:2004:ACL,
@@ -314,6 +428,17 @@ Processing (ASLTSP)},
  year = {2005}
 }
 
+@phdthesis{daume06thesis,
+ address = {Los Angeles, CA},
+ author = {Hal {Daum\'e III}},
+ link = {http://hal3.name/docs/#daume06thesis},
+ month = {August},
+ school = {University of Southern California},
+ title = {Practical Structured Learning Techniques for Natural Language
+Processing},
+ year = {2006}
+}
+
 @article{Daume:2009:SSP:1541660.1541689,
  acmid = {1541689},
  address = {Hingham, MA, USA},
@@ -332,6 +457,27 @@ Processing (ASLTSP)},
  title = {Search-based Structured Prediction},
  volume = {75},
  year = {2009}
+}
+
+@article{Davidson1967,
+ author = {Davidson, Donald},
+ journal = {Essays on actions and events},
+ title = {The logical form of action sentences},
+ year = {1967}
+}
+
+@inproceedings{DBLP:conf/uai/ZettlemoyerC05,
+ author = {Luke S. Zettlemoyer and
+Michael Collins},
+ bibsource = {dblp computer science bibliography, http://dblp.org},
+ biburl = {http://dblp.uni-trier.de/rec/bib/conf/uai/ZettlemoyerC05},
+ booktitle = {Proc. of UAI},
+ crossref = {DBLP:conf/uai/2005},
+ link = {https://dslpitt.org/uai/displayArticleDetails.jsp?mmnu=1&smnu=2&article_id=1209&proceeding_id=21},
+ timestamp = {Wed, 06 May 2015 15:02:54 +0200},
+ title = {Learning to Map Sentences to Logical Form: Structured Classification
+with Probabilistic Categorial Grammars},
+ year = {2005}
 }
 
 @article{DBLP:journals/coling/Kuhlmann13,
@@ -358,6 +504,21 @@ Marcu, Daniel},
  title = {Domain Adaptation for Statistical Classifiers},
  volume = {abs/1109.6341},
  year = {2011}
+}
+
+@article{DBLP:journals/corr/abs-1301-3781,
+ author = {Tomas Mikolov and
+Kai Chen and
+Greg Corrado and
+Jeffrey Dean},
+ bibsource = {dblp computer science bibliography, http://dblp.org},
+ biburl = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-1301-3781},
+ journal = {CoRR},
+ link = {http://arxiv.org/abs/1301.3781},
+ timestamp = {Thu, 07 May 2015 20:02:01 +0200},
+ title = {Efficient Estimation of Word Representations in Vector Space},
+ volume = {abs/1301.3781},
+ year = {2013}
 }
 
 @article{DBLP:journals/corr/HuangXY15,
@@ -452,6 +613,21 @@ Prasad Tadepalli},
  year = {2014}
 }
 
+@article{DBLP:journals/tacl/ArtziZ13,
+ author = {Yoav Artzi and
+Luke Zettlemoyer},
+ bibsource = {dblp computer science bibliography, http://dblp.org},
+ biburl = {http://dblp.uni-trier.de/rec/bib/journals/tacl/ArtziZ13},
+ journal = {TACL},
+ link = {https://tacl2013.cs.columbia.edu/ojs/index.php/tacl/article/view/27},
+ pages = {49--62},
+ timestamp = {Thu, 28 May 2015 17:23:25 +0200},
+ title = {Weakly Supervised Learning of Semantic Parsers for Mapping Instructions
+to Actions},
+ volume = {1},
+ year = {2013}
+}
+
 @article{DBLP:journals/tacl/PitlerKM13,
  author = {Emily Pitler and
 Sampath Kannan and
@@ -497,6 +673,15 @@ Mitchell Marcus},
  year = {2014}
 }
 
+@inproceedings{durrett-klein:2015:ACL-IJCNLP,
+ author = {Durrett, Greg  and  Klein, Dan},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P15-1030},
+ publisher = {ACL},
+ title = {Neural CRF Parsing},
+ year = {2015}
+}
+
 @inproceedings{dyer-EtAl:2015:ACL-IJCNLP,
  address = {Beijing, China},
  author = {Dyer, Chris  and  Ballesteros, Miguel  and  Ling, Wang  and  Matthews, Austin  and  Smith, Noah A.},
@@ -536,6 +721,21 @@ An Exploration},
  year = {2010}
 }
 
+@inproceedings{Etzioni:2011:OIE:2283396.2283398,
+ acmid = {2283398},
+ author = {Etzioni, Oren and Fader, Anthony and Christensen, Janara and Soderland, Stephen and Mausam, Mausam},
+ booktitle = {Proc. of IJCAI},
+ doi = {10.5591/978-1-57735-516-8/IJCAI11-012},
+ isbn = {978-1-57735-513-7},
+ link = {http://dx.doi.org/10.5591/978-1-57735-516-8/IJCAI11-012},
+ location = {Barcelona, Catalonia, Spain},
+ numpages = {8},
+ publisher = {AAAI Press},
+ series = {IJCAI'11},
+ title = {Open Information Extraction: The Second Generation},
+ year = {2011}
+}
+
 @inproceedings{fernandezgonzalez-gomezrodriguez:2012:EMNLP-CoNLL,
  address = {Jeju Island, Korea},
  author = {Fern\'{a}ndez-Gonz\'{a}lez, Daniel  and  G\'{o}mez-Rodr\'{i}guez, Carlos},
@@ -546,6 +746,41 @@ An Exploration},
  publisher = {Association for Computational Linguistics},
  title = {Improving Transition-Based Dependency Parsing with Buffer Transitions},
  year = {2012}
+}
+
+@article{Ferreiros2001,
+ abstract = {This paper aims to outline an analysis and interpretation of the process that led to First-Order Logic and its consolidation as a core system of modern logic. We begin with an historical overview of landmarks along the road to modern logic, and proceed to a philosophical discussion casting doubt on the possibility of a purely rational justification of the actual delimitation of First-Order-Logic. On this basis, we advance the thesis that a certain historical tradition was essential to the emergence of modern logic; this traditional context is analyzed as consisting in some guiding principles and, particularly, a set of exemplares (i.e., paradigmatic instances). Then, we proceed to interpret the historical course of development reviewed in section 1, which can broadly be described as a two-phased movement of expansion and then restriction of the scope of logical theory. We shall try to pinpoint ambivalencies in the process, and the main motives for subsequent changes. Among the latter, one may emphasize the spirit of modern axiomatics, the situation of foundational insecurity in the 1920s, the resulting desire to find systems well-behaved from a proof-theoretical point of view, and the metatheoretical results of the 1930s. Not surprisingly, the mathematical and, more specifically, the foundational context in which Firs-Order-Logic matured will be seen to have played a primary role in its shaping.},
+ author = {Ferreiros, Jose},
+ doi = {10.2307/2687794},
+ file = {:E$\backslash$:/Dropbox/Application Sync/Menedeley/2001/0704-001.pdf:pdf},
+ isbn = {10798986},
+ issn = {10798986},
+ journal = {The Bulletin of Symbolic Logic},
+ link = {http://www.jstor.org/stable/2687794},
+ number = {4},
+ pages = {441--484},
+ title = {The Road to Morden Logic - An Interpretation},
+ volume = {7},
+ year = {2001}
+}
+
+@inproceedings{finkel-grenager-manning:2005:ACL,
+ author = {Finkel, Jenny Rose  and  Grenager, Trond  and  Manning, Christopher},
+ booktitle = {Proc. of ACL},
+ doi = {10.3115/1219840.1219885},
+ link = {http://www.aclweb.org/anthology/P05-1045},
+ publisher = {ACL},
+ title = {Incorporating Non-local Information into Information Extraction Systems by Gibbs Sampling},
+ year = {2005}
+}
+
+@inproceedings{finkel-kleeman-manning:2008:ACLMain,
+ author = {Finkel, Jenny Rose  and  Kleeman, Alex  and  Manning, Christopher D.},
+ booktitle = {Proc. of ACL-08: HLT},
+ link = {http://www.aclweb.org/anthology/P/P08/P08-1109},
+ publisher = {ACL},
+ title = {Efficient, Feature-based, Conditional Random Field Parsing},
+ year = {2008}
 }
 
 @inproceedings{gao-guzman-vogel:2010:PAPERS,
@@ -589,6 +824,25 @@ An Exploration},
  publisher = {Association for Computational Linguistics},
  title = {Type-Supervised Hidden Markov Models for Part-of-Speech Tagging with Incomplete Tag Dictionaries},
  year = {2012}
+}
+
+@article{Gildea:2002:ALS:643092.643093,
+ acmid = {643093},
+ address = {Cambridge, MA, USA},
+ author = {Gildea, Daniel and Jurafsky, Daniel},
+ doi = {10.1162/089120102760275983},
+ issn = {0891-2017},
+ issue_date = {September 2002},
+ journal = {Comput. Linguist.},
+ link = {http://dx.doi.org/10.1162/089120102760275983},
+ month = {sep},
+ number = {3},
+ numpages = {44},
+ pages = {245--288},
+ publisher = {MIT Press},
+ title = {Automatic Labeling of Semantic Roles},
+ volume = {28},
+ year = {2002}
 }
 
 @inproceedings{goldberg-nivre:2012:PAPERS,
@@ -652,6 +906,23 @@ An Exploration},
  year = {2006}
 }
 
+@inproceedings{hall-durrett-klein:2014:P14-1,
+ author = {Hall, David  and  Durrett, Greg  and  Klein, Dan},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P14-1022},
+ publisher = {ACL},
+ title = {Less Grammar, More Features},
+ year = {2014}
+}
+
+@inproceedings{hall-klein:2012:EMNLP-CoNLL,
+ author = {Hall, David  and  Klein, Dan},
+ booktitle = {Proc. of EMNLP},
+ publisher = {ACL},
+ title = {Training Factored PCFGs with Expectation Propagation},
+ year = {2012}
+}
+
 @inproceedings{hatori-EtAl:2011:IJCNLP-2011,
  address = {Chiang Mai, Thailand},
  author = {Hatori, Jun  and  Matsuzaki, Takuya  and  Miyao, Yusuke  and  Tsujii, Jun'ichi},
@@ -676,6 +947,17 @@ An Exploration},
  year = {2009}
 }
 
+@article{hochreiter1997long,
+ author = {Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+ journal = {Neural computation},
+ number = {8},
+ pages = {1735--1780},
+ publisher = {MIT Press},
+ title = {Long short-term memory},
+ volume = {9},
+ year = {1997}
+}
+
 @article{Hochreiter:1997:LSM:1246443.1246450,
  acmid = {1246450},
  address = {Cambridge, MA, USA},
@@ -693,6 +975,25 @@ An Exploration},
  title = {Long Short-Term Memory},
  volume = {9},
  year = {1997}
+}
+
+@article{Hockenmaier:2007:CCC:1288681.1288685,
+ acmid = {1288685},
+ address = {Cambridge, MA, USA},
+ author = {Hockenmaier, Julia and Steedman, Mark},
+ doi = {10.1162/coli.2007.33.3.355},
+ issn = {0891-2017},
+ issue_date = {September 2007},
+ journal = {Comput. Linguist.},
+ link = {http://dx.doi.org/10.1162/coli.2007.33.3.355},
+ month = {sep},
+ number = {3},
+ numpages = {42},
+ pages = {355--396},
+ publisher = {MIT Press},
+ title = {CCGbank: A Corpus of CCG Derivations and Dependency Structures Extracted from the Penn Treebank},
+ volume = {33},
+ year = {2007}
 }
 
 @inproceedings{huang-fayong-guo:2012:NAACL-HLT,
@@ -729,6 +1030,32 @@ An Exploration},
  publisher = {ACL},
  title = {Forest Reranking: Discriminative Parsing with Non-Local Features},
  year = {2008}
+}
+
+@incollection{Huet1975,
+ author = {Huet, Gérard},
+ booktitle = {λ-Calculus and Computer Science Theory},
+ doi = {10.1007/BFb0029526},
+ editor = {Böhm, C.},
+ isbn = {978-3-540-07416-8},
+ language = {English},
+ link = {http://dx.doi.org/10.1007/BFb0029526},
+ pages = {192-212},
+ publisher = {Springer Berlin Heidelberg},
+ series = {Lecture Notes in Computer Science},
+ title = {Unification in typed lambda calculus},
+ volume = {37},
+ year = {1975}
+}
+
+@inproceedings{ICML2012Matuszek_822,
+ author = {Cynthia Matuszek and Nicholas Fitzgerald and Luke Zettlemoyer and Liefeng Bo and Dieter Fox},
+ booktitle = {Proc. of ICML},
+ editor = {John Langford and Joelle Pineau},
+ link = {http://icml.cc/2012/papers/822.pdf},
+ publisher = {ACM},
+ title = {A Joint Model of Language and Perception for Grounded Attribute Learning},
+ year = {2012}
 }
 
 @inproceedings{jiang-EtAl:2013:ACL2013,
@@ -791,6 +1118,16 @@ An Exploration},
  year = {2014}
 }
 
+@inproceedings{klein-manning:2003:ACL,
+ author = {Dan Klein  and  Christopher D. Manning},
+ booktitle = {Proc. of ACL},
+ doi = {10.3115/1075096.1075150},
+ link = {http://www.aclweb.org/anthology/P03-1054},
+ publisher = {ACL},
+ title = {Accurate Unlexicalized Parsing},
+ year = {2003}
+}
+
 @inproceedings{koo-carreras-collins:2008:ACLMain,
  address = {Columbus, Ohio},
  author = {Koo, Terry  and  Carreras, Xavier  and  Collins, Michael},
@@ -827,16 +1164,31 @@ An Exploration},
  year = {2010}
 }
 
-@inproceedings{koo-EtAl:2010:EMNLP,
- address = {Cambridge, MA},
- author = {Koo, Terry  and  Rush, Alexander M.  and  Collins, Michael  and  Jaakkola, Tommi  and  Sontag, David},
- booktitle = {Proceedings of the 2010 Conference on Empirical Methods in Natural Language Processing},
- link = {http://www.aclweb.org/anthology/D10-1125},
- month = {October},
- pages = {1288--1298},
- publisher = {Association for Computational Linguistics},
- title = {Dual Decomposition for Parsing with Non-Projective Head Automata},
+@inproceedings{kwiatkowksi-EtAl:2010:EMNLP,
+ author = {Kwiatkowksi, Tom  and  Zettlemoyer, Luke  and  Goldwater, Sharon  and  Steedman, Mark},
+ booktitle = {Proc. of EMNLP},
+ link = {http://www.aclweb.org/anthology/D10-1119},
+ publisher = {ACL},
+ title = {Inducing Probabilistic {CCG} Grammars from Logical Form with Higher-Order Unification},
  year = {2010}
+}
+
+@inproceedings{kwiatkowski-EtAl:2011:EMNLP,
+ author = {Kwiatkowski, Tom  and  Zettlemoyer, Luke  and  Goldwater, Sharon  and  Steedman, Mark},
+ booktitle = {Proc. of EMNLP},
+ link = {http://www.aclweb.org/anthology/D11-1140},
+ publisher = {ACL},
+ title = {Lexical Generalization in CCG Grammar Induction for Semantic Parsing},
+ year = {2011}
+}
+
+@inproceedings{kwiatkowski-EtAl:2013:EMNLP,
+ author = {Kwiatkowski, Tom  and  Choi, Eunsol  and  Artzi, Yoav  and  Zettlemoyer, Luke},
+ booktitle = {Proc. of EMNLP},
+ link = {http://www.aclweb.org/anthology/D13-1161},
+ publisher = {ACL},
+ title = {Scaling Semantic Parsers with On-the-Fly Ontology Matching},
+ year = {2013}
 }
 
 @inproceedings{Lafferty:2001:CRF:645530.655813,
@@ -883,6 +1235,15 @@ An Exploration},
  year = {2009}
 }
 
+@inproceedings{liang-jordan-klein:2011:ACL-HLT2011,
+ author = {Liang, Percy  and  Jordan, Michael  and  Klein, Dan},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P11-1060},
+ publisher = {ACL},
+ title = {Learning Dependency-Based Compositional Semantics},
+ year = {2011}
+}
+
 @phdthesis{liang2005semi,
  author = {Liang, Percy},
  school = {Citeseer},
@@ -917,6 +1278,15 @@ An Exploration},
  title = {Enhancing Chinese Word Segmentation with Character Clustering},
  volume = {8202},
  year = {2013}
+}
+
+@inproceedings{liu-EtAl:2014:EMNLP20141,
+ author = {Liu, Yijia  and  Zhang, Yue  and  Che, Wanxiang  and  Liu, Ting  and  Wu, Fan},
+ booktitle = {Proc. of EMNLP},
+ link = {http://www.aclweb.org/anthology/D14-1093},
+ publisher = {ACL},
+ title = {Domain Adaptation for CRF-based Chinese Word Segmentation using Free Annotations},
+ year = {2014}
 }
 
 @inproceedings{liu-liu-lin:2005:ACL,
@@ -973,6 +1343,15 @@ An Exploration},
  publisher = {Association for Computational Linguistics},
  title = {Improved {HMM} Alignment Models for Languages with Scarce Resources},
  year = {2005}
+}
+
+@inproceedings{lu-ng:2011:EMNLP,
+ author = {Lu, Wei  and  Ng, Hwee Tou},
+ booktitle = {Proc. of EMNLP},
+ link = {http://www.aclweb.org/anthology/D11-1149},
+ publisher = {ACL},
+ title = {A Probabilistic Forest-to-String Model for Language Generation from Typed Lambda Calculus Expressions},
+ year = {2011}
 }
 
 @inproceedings{ma-zhang-zhu:2014:P14-1,
@@ -1072,6 +1451,15 @@ An Exploration},
  year = {2011}
 }
 
+@inproceedings{mcdonald-satta:2007:IWPT2007,
+ author = {McDonald, Ryan  and  Satta, Giorgio},
+ booktitle = {Proc. of IWPT},
+ link = {http://www.aclweb.org/anthology/W/W07/W07-2216},
+ publisher = {ACL},
+ title = {On the Complexity of Non-Projective Data-Driven Dependency Parsing},
+ year = {2007}
+}
+
 @inproceedings{mcdonald2006online,
  author = {McDonald, Ryan T and Pereira, Fernando CN},
  booktitle = {EACL},
@@ -1118,6 +1506,15 @@ An Exploration},
  year = {2015}
 }
 
+@inproceedings{ng-low:2004:EMNLP,
+ author = {Ng, Hwee Tou  and  Low, Jin Kiat},
+ booktitle = {Proc. of EMNLP 2004},
+ editor = {Dekang Lin and Dekai Wu},
+ publisher = {ACL},
+ title = {Chinese Part-of-Speech Tagging: One-at-a-Time or All-at-Once? Word-Based or Character-Based?},
+ year = {2004}
+}
+
 @incollection{NIPS2001_2089,
  author = {Michael Collins and Nigel Duffy},
  booktitle = {NIPS},
@@ -1138,6 +1535,28 @@ An Exploration},
  publisher = {MIT Press},
  title = {Semi-Markov Conditional Random Fields for Information Extraction},
  year = {2004}
+}
+
+@incollection{NIPS2012_4824,
+ author = {Alex Krizhevsky and Sutskever, Ilya and Geoffrey E. Hinton},
+ booktitle = {Advances in Neural Information Processing Systems 25},
+ editor = {F. Pereira and C. J. C. Burges and L. Bottou and K. Q. Weinberger},
+ link = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf},
+ pages = {1097--1105},
+ publisher = {Curran Associates, Inc.},
+ title = {ImageNet Classification with Deep Convolutional Neural Networks},
+ year = {2012}
+}
+
+@incollection{NIPS2013_5028,
+ author = {Socher, Richard and Chen, Danqi and Manning, Christopher D and Ng, Andrew},
+ booktitle = {Advances in Neural Information Processing Systems 26},
+ editor = {C.J.C. Burges and L. Bottou and M. Welling and Z. Ghahramani and K.Q. Weinberger},
+ link = {http://papers.nips.cc/paper/5028-reasoning-with-neural-tensor-networks-for-knowledge-base-completion.pdf},
+ pages = {926--934},
+ publisher = {Curran Associates, Inc.},
+ title = {Reasoning With Neural Tensor Networks for Knowledge Base Completion},
+ year = {2013}
 }
 
 @inproceedings{nivre-EtAl:2006:CoNLL-X,
@@ -1270,19 +1689,6 @@ An Exploration},
  year = {2002}
 }
 
-@inproceedings{papineni-EtAl:2002:ACL,
- address = {Philadelphia, Pennsylvania, USA},
- author = {Kishore Papineni  and  Salim Roukos  and  Todd Ward  and  Wei-Jing Zhu},
- booktitle = {Proceedings of 40th Annual Meeting of the Association for Computational Linguistics},
- doi = {10.3115/1073083.1073135},
- link = {http://www.aclweb.org/anthology/P02-1040},
- month = {July},
- pages = {311--318},
- publisher = {Association for Computational Linguistics},
- title = {Bleu: a Method for Automatic Evaluation of Machine Translation},
- year = {2002}
-}
-
 @inproceedings{passos-kumar-mccallum:2014:W14-16,
  address = {Ann Arbor, Michigan},
  author = {Passos, Alexandre  and  Kumar, Vineet  and  McCallum, Andrew},
@@ -1295,6 +1701,15 @@ An Exploration},
  year = {2014}
 }
 
+@inproceedings{pasupat-liang:2015:ACL-IJCNLP,
+ author = {Pasupat, Panupong  and  Liang, Percy},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P15-1142},
+ publisher = {ACL},
+ title = {Compositional Semantic Parsing on Semi-Structured Tables},
+ year = {2015}
+}
+
 @inproceedings{pei-ge-chang:2014:P14-1,
  address = {Baltimore, Maryland},
  author = {Pei, Wenzhe  and  Ge, Tao  and  Chang, Baobao},
@@ -1305,6 +1720,15 @@ An Exploration},
  publisher = {ACL},
  title = {Max-Margin Tensor Neural Network for Chinese Word Segmentation},
  year = {2014}
+}
+
+@inproceedings{peng-mccallum:2004:HLTNAACL,
+ author = {Peng, Fuchun  and  McCallum, Andrew},
+ booktitle = {HLT-NAACL 2004: Main Proc.},
+ editor = {Susan Dumais, Daniel Marcu and Salim Roukos},
+ publisher = {ACL},
+ title = {Accurate Information Extraction from Research Papers using Conditional Random Fields},
+ year = {2004}
 }
 
 @inproceedings{pennington-socher-manning:2014:EMNLP2014,
@@ -1329,26 +1753,8 @@ An Exploration},
  link = {http://www.lrec-conf.org/proceedings/lrec2012/pdf/274_Paper.pdf},
  month = {May},
  note = {ACL Anthology Identifier: L12-1115},
- pages = {{2089--2096}
-}, }},
- publisher = {European Language Resources Association (ELRA)},
- title = {A Universal Part-of-Speech Tagset},
- year = {2012}
-}
-
-@inproceedings{PETROV12.274.L12-1115,
- address = {Istanbul, Turkey},
- author = {Slav Petrov and Dipanjan Das and Ryan McDonald},
- booktitle = {Proceedings of the Eighth International Conference on Language Resources and Evaluation (LREC-2012)},
- editor = {Nicoletta Calzolari and Khalid Choukri and Thierry Declerck and Mehmet U\u{g}ur Do\u{g}an and Bente Maegaard and Joseph Mariani and Jan Odijk and Stelios Piperidis},
- isbn = {978-2-9517408-7-7},
- language = {English},
- link = {http://www.lrec-conf.org/proceedings/lrec2012/pdf/274_Paper.pdf},
- month = {May},
- note = {ACL Anthology Identifier: L12-1115},
- pages = {2089--2096},
- publisher = {European Language Resources Association (ELRA)},
- title = {A Universal Part-of-Speech Tagset},
+ pages = {{{{2089--2096}
+}, }}, publisher = {European Language Resources Association (ELRA)}}, title = {A Universal Part-of-Speech Tagset}},
  year = {2012}
 }
 
@@ -1374,6 +1780,12 @@ An Exploration},
  publisher = {ACL},
  title = {Design Challenges and Misconceptions in Named Entity Recognition},
  year = {2009}
+}
+
+@misc{Ratnaparkhi96amaximum,
+ author = {Adwait Ratnaparkhi},
+ title = {A Maximum Entropy Model for Part-Of-Speech Tagging},
+ year = {1996}
 }
 
 @article{Reiter:1997:BAN:974487.974490,
@@ -1495,6 +1907,24 @@ An Exploration},
  year = {2008}
 }
 
+@inproceedings{socher-EtAl:2013:ACL2013,
+ author = {Socher, Richard  and  Bauer, John  and  Manning, Christopher D.  and  Andrew Y., Ng},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P13-1045},
+ publisher = {ACL},
+ title = {Parsing with Compositional Vector Grammars},
+ year = {2013}
+}
+
+@inproceedings{socher-EtAl:2013:EMNLP,
+ author = {Socher, Richard  and  Perelygin, Alex  and  Wu, Jean  and  Chuang, Jason  and  Manning, Christopher D.  and  Ng, Andrew  and  Potts, Christopher},
+ booktitle = {Proc. of EMNLP},
+ link = {http://www.aclweb.org/anthology/D13-1170},
+ publisher = {ACL},
+ title = {Recursive Deep Models for Semantic Compositionality Over a Sentiment Treebank},
+ year = {2013}
+}
+
 @inproceedings{song-EtAl:2012:POSTERS,
  address = {Mumbai, India},
  author = {Song, Yan  and  Klassen, Prescott  and  Xia, Fei  and  Kit, Chunyu},
@@ -1534,6 +1964,15 @@ Qun Liu},
  pages = {1522-1528},
  title = {Joint Morphological Generation and Syntactic Linearization.},
  year = {2014}
+}
+
+@book{Steedman:2000:SP:332037,
+ address = {Cambridge, MA, USA},
+ author = {Steedman, Mark},
+ isbn = {0-262-19420-1},
+ publisher = {MIT Press},
+ title = {The Syntactic Process},
+ year = {2000}
 }
 
 @inproceedings{sun-EtAl:2009:NAACLHLT09,
@@ -1584,6 +2023,19 @@ Qun Liu},
  year = {2008}
 }
 
+@article{TACL302,
+ abstract = {We develop parsing oracles for two transition-based dependency parsers, including the arc-standard parser, solving a problem that was left open in (Goldberg and Nivre, 2013). We experimentally show that using these oracles in training yields superior parsing accuracies on many languages.},
+ author = {Goldberg, Yoav  and Sartorio, Francesco  and Satta, Giorgio},
+ issn = {2307-387X},
+ journal = {Transactions of the Association for Computational Linguistics},
+ keyword = {},
+ link = {https://tacl2013.cs.columbia.edu/ojs/index.php/tacl/article/view/302},
+ pages = {119--130},
+ title = {A Tabular Method for Dynamic Oracles in Transition-Based Parsing},
+ volume = {2},
+ year = {2014}
+}
+
 @article{TACL68,
  abstract = {This paper proposes a discriminative forest reranking algorithm for dependency parsing that can be seen as a form of efficient stacked parsing. A dynamic programming shift-reduce parser produces a packed derivation forest which is then scored by a discriminative reranker, using the 1-best tree output by the shift-reduce parser as guide features in addition to third-order graph-based features. To improve efficiency and accuracy, this paper also proposes a novel shift-reduce parser that eliminates the spurious ambiguity of arc-standard transition systems. Testing on the English Penn Treebank data, forest reranking gave a state-of-the-art unlabeled dependency accuracy of 93.12.},
  author = {Katsuhiko Hayashi and Shuhei Kondo and Yuji Matsumoto},
@@ -1597,6 +2049,24 @@ Qun Liu},
  year = {2013}
 }
 
+@inproceedings{tai-socher-manning:2015:ACL-IJCNLP,
+ author = {Tai, Kai Sheng  and  Socher, Richard  and  Manning, Christopher D.},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P15-1150},
+ publisher = {ACL},
+ title = {Improved Semantic Representations From Tree-Structured Long Short-Term Memory Networks},
+ year = {2015}
+}
+
+@inproceedings{tang-EtAl:2014:P14-1,
+ author = {Tang, Duyu  and  Wei, Furu  and  Yang, Nan  and  Zhou, Ming  and  Liu, Ting  and  Qin, Bing},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P14-1146},
+ publisher = {ACL},
+ title = {Learning Sentiment-Specific Word Embedding for Twitter Sentiment Classification},
+ year = {2014}
+}
+
 @inproceedings{taskar-simon-dan:2005:HLTEMNLP,
  address = {Vancouver, British Columbia, Canada},
  author = {Taskar, Ben  and  Simon, Lacoste-Julien  and  Dan, Klein},
@@ -1607,6 +2077,15 @@ Qun Liu},
  publisher = {Association for Computational Linguistics},
  title = {A Discriminative Matching Approach to Word Alignment},
  year = {2005}
+}
+
+@inproceedings{tse-curran:2010:PAPERS,
+ author = {Tse, Daniel  and  Curran, James R.},
+ booktitle = {Proc. of Coling},
+ link = {http://www.aclweb.org/anthology/C10-1122},
+ publisher = {Coling 2010 Organizing Committee},
+ title = {Chinese CCGbank: extracting CCG derivations from the Penn Chinese Treebank},
+ year = {2010}
 }
 
 @inproceedings{Tseng05aconditional,
@@ -1640,6 +2119,15 @@ Qun Liu},
  year = {2009}
 }
 
+@inproceedings{wang-berant-liang:2015:ACL-IJCNLP,
+ author = {Wang, Yushi  and  Berant, Jonathan  and  Liang, Percy},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P15-1129},
+ publisher = {ACL},
+ title = {Building a Semantic Parser Overnight},
+ year = {2015}
+}
+
 @inproceedings{wang-EtAl:2011:IJCNLP-2011,
  address = {Chiang Mai, Thailand},
  author = {Wang, Yiou  and  Kazama, Jun'ichi  and  Tsuruoka, Yoshimasa  and  Chen, Wenliang  and  Zhang, Yujie  and  Torisawa, Kentaro},
@@ -1650,6 +2138,15 @@ Qun Liu},
  publisher = {AFNLP},
  title = {Improving Chinese Word Segmentation and POS Tagging with Semi-supervised Methods Using Large Auto-Analyzed Data},
  year = {2011}
+}
+
+@inproceedings{watanabe-sumita:2015:ACL-IJCNLP,
+ author = {Watanabe, Taro  and  Sumita, Eiichiro},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P15-1113},
+ publisher = {ACL},
+ title = {Transition-based Neural Constituent Parsing},
+ year = {2015}
 }
 
 @inproceedings{white-rajkumar:2009:EMNLP,
@@ -1679,6 +2176,24 @@ Qun Liu},
  publisher = {Springer},
  title = {Reining in CCG chart realization},
  year = {2004}
+}
+
+@inproceedings{wong-mooney:2006:HLT-NAACL06-Main,
+ author = {Wong, Yuk Wah  and  Mooney, Raymond},
+ booktitle = {Proc. of NAACL},
+ link = {http://www.aclweb.org/anthology/N/N06/N06-1056},
+ publisher = {ACL},
+ title = {Learning for Semantic Parsing with Statistical Machine Translation},
+ year = {2006}
+}
+
+@inproceedings{wong-mooney:2007:ACLMain,
+ author = {Wong, Yuk Wah  and  Mooney, Raymond},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P07-1121},
+ publisher = {ACL},
+ title = {Learning Synchronous Grammars for Semantic Parsing with Lambda Calculus},
+ year = {2007}
 }
 
 @inproceedings{Wong:1996:CWS:992628.992665,
@@ -1728,6 +2243,16 @@ Qun Liu},
  year = {2014}
 }
 
+@inproceedings{xue-shen:2003:SIGHAN,
+ author = {Nianwen Xue  and  Libin Shen},
+ booktitle = {Proc. of the Second SIGHAN Workshop on Chinese Language Processing},
+ doi = {10.3115/1119250.1119278},
+ link = {http://www.aclweb.org/anthology/W03-1728},
+ publisher = {ACL},
+ title = {Chinese Word Segmentation as LMR Tagging},
+ year = {2003}
+}
+
 @inproceedings{Xue:2003:CWS:1119250.1119278,
  acmid = {1119278},
  address = {Stroudsburg, PA, USA},
@@ -1742,6 +2267,25 @@ Qun Liu},
  series = {SIGHAN '03},
  title = {Chinese Word Segmentation As LMR Tagging},
  year = {2003}
+}
+
+@article{Xue:2008:LCP:1403157.1403161,
+ acmid = {1403161},
+ address = {Cambridge, MA, USA},
+ author = {Xue, Nianwen},
+ doi = {10.1162/coli.2008.34.2.225},
+ issn = {0891-2017},
+ issue_date = {June 2008},
+ journal = {Comput. Linguist.},
+ link = {http://dx.doi.org/10.1162/coli.2008.34.2.225},
+ month = {jun},
+ number = {2},
+ numpages = {31},
+ pages = {225--255},
+ publisher = {MIT Press},
+ title = {Labeling Chinese Predicates with Semantic Roles},
+ volume = {34},
+ year = {2008}
 }
 
 @inproceedings{yang-cardie:2012:EMNLP-CoNLL,
@@ -1768,22 +2312,47 @@ Qun Liu},
  year = {2012}
 }
 
-@inproceedings{yijia-EtAl:2012:CLP2012,
- address = {Tianjin, China},
- author = {Yijia, Liu  and  Meishan, Zhang  and  Wanxiang, Che  and  Ting, Liu  and  Yihe, Deng},
- booktitle = {Proceedings of the Second CIPS-SIGHAN Joint Conference on Chinese Language Processing},
- link = {http://www.aclweb.org/anthology/W12-6316},
- month = {December},
- pages = {85--89},
- publisher = {Association for Computational Linguistics},
- title = {Micro blogs Oriented Word Segmentation System},
- year = {2012}
-}
-
 @techreport{Yu:2001:PNM,
  author = {Yu, Shiwen and Lu, Jianming and Zhu, Xuefeng and Duan, Huiming and Kang, Shiyong and Sun, Honglin and Wang, Hui and Zhao, Qiang and Zhan, Weidong},
  title = {Processing norms of modern chinese corpus},
  year = {2001}
+}
+
+@inproceedings{Zelle1996,
+ author = {Zelle, John M. and Raymond, Mooney J.},
+ booktitle = {AAAI/IAAI},
+ file = {:E$\backslash$:/Dropbox/Application Sync/Menedeley/1996/1996, Moines, Zelle, Mooney, Learning to Parse Database Queries Using Inductive Logic Programming Learning to Parse DB queries.pdf:pdf},
+ link = {http://www.cs.utexas.edu/{~}ai-lab/pub-view.php?PubID=51437},
+ number = {August},
+ title = {Learning to Parse Database Queries using Inductive Logic Programming},
+ year = {1996}
+}
+
+@inproceedings{zeng-EtAl:2014:Coling,
+ author = {Zeng, Daojian  and  Liu, Kang  and  Lai, Siwei  and  Zhou, Guangyou  and  Zhao, Jun},
+ booktitle = {Proc. of Coling},
+ link = {http://www.aclweb.org/anthology/C14-1220},
+ publisher = {Dublin City University and ACL},
+ title = {Relation Classification via Convolutional Deep Neural Network},
+ year = {2014}
+}
+
+@inproceedings{zettlemoyer-collins:2007:EMNLP-CoNLL2007,
+ author = {Zettlemoyer, Luke  and  Collins, Michael},
+ booktitle = {Proc. of EMNLP},
+ link = {http://www.aclweb.org/anthology/D/D07/D07-1071},
+ publisher = {ACL},
+ title = {Online Learning of Relaxed {CCG} Grammars for Parsing to Logical Form},
+ year = {2007}
+}
+
+@inproceedings{zettlemoyer-collins:2009:ACLIJCNLP,
+ author = {Zettlemoyer, Luke  and  Collins, Michael},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P/P09/P09-1110},
+ publisher = {ACL},
+ title = {Learning Context-Dependent Mappings from Sentences to Logical Form},
+ year = {2009}
 }
 
 @inproceedings{zhang-blackwood-clark:2012:EACL2012,
@@ -1965,6 +2534,15 @@ Beam Search},
  year = {2013}
 }
 
+@inproceedings{zhao-huang:2015:NAACL-HLT,
+ author = {Zhao, Kai  and  Huang, Liang},
+ booktitle = {Proc. of NAACL},
+ link = {http://www.aclweb.org/anthology/N15-1162},
+ publisher = {ACL},
+ title = {Type-Driven Incremental Semantic Parsing with Polymorphism},
+ year = {2015}
+}
+
 @inproceedings{Zhao:2008:ijcnpl:an,
  author = {Hai Zhao and Chunyu Kit},
  booktitle = {In: The Third International Joint Conference on Natural Language Processing (IJCNLP-2008},
@@ -2014,6 +2592,15 @@ Beam Search},
  publisher = {Association for Computational Linguistics},
  title = {The Effects of Discourse Connectives Prediction on Implicit Discourse Relation Recognition},
  year = {2010}
+}
+
+@inproceedings{zhou-EtAl:2015:ACL-IJCNLP3,
+ author = {Zhou, Hao  and  Zhang, Yue  and  Huang, Shujian  and  Chen, Jiajun},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P15-1117},
+ publisher = {ACL},
+ title = {A Neural Probabilistic Structured-Prediction Model for Transition-Based Dependency Parsing},
+ year = {2015}
 }
 
 @inproceedings{zhu-EtAl:2013:ACL20131,
